--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@adobe/react-spectrum": "^3.36.3",
+    "@react-spectrum/color": "^3.0.0-rc.1",
+    "@react-spectrum/provider": "^3.9.10",
+    "@react-spectrum/theme-default": "^3.5.12",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
